# vsys

./: .gitignore  CMakeLists.txt  README.md  krebuild.bat  krebuild.sh  urebuild.bat  urebuild.sh
inc/: base.h  csupport.h  module.h  strings.h  targets.h
inc/kernel/linux/: base.h
inc/linux/kernel/: base.h
inc/targets/: targets.h
inc/targets/linux/kernel/: base.h  seqprop.h
inc/utils/: csupport.h  debug.h
inc/vcrt/: crtinit.h  stdio.h  string.h
samples/hellodrv/: CMakeLists.txt  hellodrv.cpp  hellodrv.h
samples/module/: CMakeLists.txt  test_cdtor.cpp  test_cdtor.h  test_module.cpp  test_module.h
src/: base.cpp  debug.cpp  driver.cpp  module.cpp  strings.cpp
src/kernel/linux/: kernel.c  kernel.cpp
src/utils/: debug.cpp  strings.cpp
src/vcrt/: crtinit.cpp  memory.cpp  stdio.cpp
tools/cmake/: detectos.cmake  global.cmake  linux-kbuild.cmake  linux-kernel.cmake  linux.cmake  linux_kernel.cmake
tools/gpio/: .Module.symvers.cmd  .modules.order.cmd  .sio_gpio.ko.cmd  .sio_gpio.mod.cmd  .sio_gpio.mod.o.cmd  .sio_gpio.o.cmd  modules.order  sio_gpio.c  sio_gpio.h  sio_gpio.ko  sio_gpio.mod.c  test.cc  test.mod  testgpio.c
tools/kbuild/: Makefile  kbuild.c  kbuild.sh
vsyslib/: CMakeLists.txt
vsyslib/inc/: driver.h  targets.h
vsyslib/src/: driver.cpp
